plugins {
    id 'application'
}

version = '1.2.1'
group = 'com.chromosundrift'

application {
    mainClass.set('com.chromosundrift.vectorbrat.VectorBrat')
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(20)
    }
}

repositories {
    mavenCentral()
}

dependencies {

    // for jack and audioservers
    implementation 'org.jaudiolibs:jnajack:1.4.0'
    implementation 'org.jaudiolibs:audioservers-api:1.2.0'
    implementation 'org.jaudiolibs:audioservers-jack:1.2.0'
    implementation 'org.jaudiolibs:audioservers-javasound:1.2.0'

    implementation "com.google.guava:guava:31.1-jre"

    // logging using slf4j api and logback implementation
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
    runtimeOnly group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.6'
    runtimeOnly group: 'ch.qos.logback', name: 'logback-core', version: '1.4.6'
    runtimeOnly group: 'ch.qos.logback', name: 'logback-access', version: '1.4.6'

    implementation group: 'commons-io', name: 'commons-io', version: '2.7'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'

    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
    testImplementation 'org.mockito:mockito-core:3.3.3'
}






